# paracon

./: .gitignore  .readthedocs.yaml  README.md  build_zipapp.sh  requirements-zipapp.txt  setup.cfg  tox.ini  version.py
docs/: LICENSE  conf.py  index.rst  license.rst  userguide.rst
docs/_static/css/: bmc.css
docs/_templates/: footer.html
paracon/: conf.txt  config.py  paracon.def  paracon.py  pserver.py  urwidx.py
