[metadata]
name = paracon
version = attr: paracon.paracon.__version__
description = Packet Radio Console
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/mfncooper/paracon
author = Martin F N Cooper
author_email = mfncooper@gmail.com
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Communications :: Ham Radio
    Development Status :: 4 - Beta

[options]
zip_safe = True
packages = paracon
platforms = any
python_requires = >= 3.7
install_requires =
    pyham_ax25
    pyham_pe
    urwid

[options.package_data]
paracon = paracon.def

[options.entry_points]
console_scripts =
    paracon = paracon.paracon:run
